--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -26,27 +26,27 @@
                 </div>
                 <div class="line">
                     <span class="tit">用户名：</span>
-                    <input id="name" type="text" placeholder="请输入用户名/手机号" tabindex="1">
+                    <input id="name" name="name_Inp" type="text" placeholder="请输入用户名/手机号" tabindex="1">
                 </div>
                 <div class="line">
                     <span class="tit">密码：</span>
-                    <input type="password" id="password" placeholder="请输入密码" tabindex="2">
+                    <input type="password" name="password_Inp" id="password" placeholder="请输入密码" tabindex="2">
                 </div>
                 <div class="line code-line" style="display:none;">
                     <span class="tit">图形验证：</span>
-                    <input type="text" id="code" maxlength="4" class="code" tabindex="3">
+                    <input type="text" id="code" name="code_Inp" maxlength="4" class="code" tabindex="3">
                     <span class="verify-code-area"></span>
                 </div>
                 <div class="line" style="margin-top: 32px;">
                     <span class="tit"></span>
                     <div class="actions">
-                        <button class="g-btn g-btn-large-major btn-login" tabindex="4">登录</button>
+                        <button type="button" name="login_Btn" class="g-btn g-btn-large-major btn-login" tabindex="4">登录</button>
                         <div class="login-tips"><em>账号或者密码错误</em></div>
                     </div>
                 </div>
                 <div class="line">
                     <span class="tit"></span>
-                    <a href="https://lantouzi.com/fgtpsw" class="forget-psw">忘记密码？</a>
+                    <a href="" class="forget-psw" onclick="forgetPassword()">忘记密码？</a>
                 </div>
                 <div class="line">
                     <span class="tit"></span>
@@ -61,6 +61,22 @@
 
 
 <script src="plugin/jQuery/jquery-2.2.3.min.js"></script>
+<script src="js/login.js"></script>
 </body>
 
+<script style="text/script">
+    var $passwordCl = $('#password'), $lan_login = $('.lan-login');
+
+    $passwordCl.on('focus', function() {
+        $lan_login.addClass('password');
+    }).on('blur', function() {
+        $lan_login.removeClass('password');
+    });
+
+
+    function forgetPassword(){
+        alert("请联系merlin");
+    }
+
+</script>
 </html>
