--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,6 +62,7 @@
 
 <script src="plugin/jQuery/jquery-2.2.3.min.js"></script>
 <script src="js/login.js"></script>
+<script src="js/passport.js"></script>
 </body>
 
 <script style="text/script">
